--- a/services/config/track-config.json
+++ b/services/config/track-config.json
@@ -16,13 +16,17 @@
     {
       "code": "c_nutrition",
       "name": "Nutrition"
+    },
+    {
+      "code": "c_custom",
+      "name": "Custom"
     }
   ],
   "predefinedTrackItems": [
     {
       "code": "i_emergency_medication",
       "category_code": "c_meds_treatment",
-      "name": "Emergency Medications",
+      "name": "Emergency Medication",
       "frequency": "weekly",
       "questions": [
         {
@@ -38,11 +42,13 @@
         {
           "code": "q_emergency_med_name",
           "text": "What is the name of the rescue/as-needed medication you took?",
-          "type": "mcq",
+          "type": "multi-choice",
           "required": false,
           "summary_template": "Medication - {{answer}}",
           "parent_question_code": "q_emergency_med_times",
-          "display_condition": "{\"gt\": 0}",
+          "display_condition": {
+            "gt": 0
+          },
           "responseOptions": [
             {
               "code": "o_emer_med_name_inhaler",
@@ -73,7 +79,9 @@
           "required": false,
           "summary_template": "Medication was taken {{answer}} times.",
           "parent_question_code": "q_emergency_med_name",
-          "display_condition": "{\"equals\": \"o_emer_med_name_other\"}"
+          "display_condition": {
+            "equals": "o_emer_med_name_other"
+          }
         }
       ]
     },
@@ -88,7 +96,6 @@
           "text": "Did you exercise today?",
           "type": "boolean",
           "required": true,
-          "units": "minutes",
           "summary_template": "Exercise done: {{answer}}.",
           "parent_question_code": null,
           "display_condition": null,
@@ -106,11 +113,13 @@
         {
           "code": "q_exer_type",
           "text": "What type of exercises did you do?",
-          "type": "mcq",
-          "required": false,
+          "type": "multi-select",
+          "required": true,
           "summary_template": "Exercise type - {{answer}}",
           "parent_question_code": "q_exer_today",
-          "display_condition": "{\"equals\": \"o_exer_today_yes\"}",
+          "display_condition": {
+            "equals": "o_exer_today_yes"
+          },
           "responseOptions": [
             {
               "code": "o_cardio",
@@ -139,7 +148,9 @@
           "units": "minute",
           "summary_template": "Completed a {{answer}} minute workout.",
           "parent_question_code": "q_exer_type",
-          "display_condition": "{\"in\": [\"o_cardio\",\"o_strength\",\"o_yoga\",\"o_stretch\"]}"
+          "display_condition": {
+            "parent_response_exists": true
+          }
         }
       ]
     },
@@ -177,7 +188,9 @@
           "required": false,
           "summary_template": "{{answer}} leave/s taken in past month.",
           "parent_question_code": "q_sick_leave",
-          "display_condition": "{\"equals\":\"o_leave_yes\"}"
+          "display_condition": {
+            "equals": "o_leave_yes"
+          }
         },
         {
           "code": "q_leave_reason",
@@ -186,7 +199,9 @@
           "required": false,
           "summary_template": "Reason of leave/s: {{answer}}",
           "parent_question_code": "q_leave_times",
-          "display_condition": "{\"gt\":0}"
+          "display_condition": {
+            "gt": 0
+          }
         }
       ]
     },
@@ -199,7 +214,7 @@
         {
           "code": "q_meal_rating",
           "text": "How would you rate your meals today?",
-          "type": "mcq",
+          "type": "multi-choice",
           "required": true,
           "summary_template": "Rating for today's meals is {{answer}}.",
           "parent_question_code": null,
@@ -245,7 +260,9 @@
           "required": true,
           "summary_template": "Food sensitivities/issues: {{answer}}.",
           "parent_question_code": "q_food_issue",
-          "display_condition": "{\"equals\":\"o_food_issue_yes\"}"
+          "display_condition": {
+            "equals": "o_food_issue_yes"
+          }
         }
       ]
     }
