--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-native-css-interop": "^0.1.22",
     "react-native-draggable-flatlist": "^4.0.3",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-gifted-charts": "^1.4.63",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal-datetime-picker": "^18.0.0",
