--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@expo/html-elements": "^0.12.5",
     "@expo/vector-icons": "^14.1.0",
+    "@gluestack-style/react": "^1.0.57",
     "@gluestack-ui/actionsheet": "^0.2.53",
     "@gluestack-ui/alert": "^0.1.16",
     "@gluestack-ui/alert-dialog": "^0.1.38",
@@ -33,6 +34,7 @@
     "@gluestack-ui/select": "^0.1.31",
     "@gluestack-ui/spinner": "^0.1.15",
     "@gluestack-ui/textarea": "^0.1.25",
+    "@gluestack-ui/themed": "^1.1.73",
     "@gluestack-ui/toast": "^1.0.9",
     "@gluestack-ui/utils": "^3.0.3",
     "@legendapp/motion": "^2.4.0",
@@ -64,6 +66,7 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
     "react-native-calendar-strip": "^2.2.6",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-css-interop": "^0.1.22",
     "react-native-draggable-flatlist": "^4.0.3",
     "react-native-gesture-handler": "~2.24.0",
