--- a/package.json
+++ b/package.json
@@ -52,8 +52,10 @@
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.4",
     "expo-linking": "~7.1.7",
+    "expo-print": "^15.0.7",
     "expo-router": "~5.0.5",
     "expo-secure-store": "~14.2.3",
+    "expo-sharing": "^14.0.7",
     "expo-splash-screen": "~0.30.8",
     "expo-sqlite": "~15.2.10",
     "expo-status-bar": "~2.2.3",
@@ -72,6 +74,7 @@
     "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-gifted-charts": "^1.4.63",
+    "react-native-html-to-pdf": "^1.3.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "~3.17.4",
